# qa_guru_python_12_homework_16

./: README.md  pyproject.toml
